--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     background-color: #40916c;
     border: 3px solid #081c15;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 8rem;
